--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -3,12 +3,12 @@
     <div class="header-footer-breadcrumb">
         <ul class="breadcrumb" role="navigation">
             <li><a role="menu" href=".">{{msg('server.home')}}</a></li>
-            <li class="active"><a role="menu" href="#/settings">{{msg('ODK')}}</a></li>
+            <li class="active"><a role="menu" href="#/odk/settings">{{msg('odk.settings')}}</a></li>
         </ul>
     </div>
     <div class="header-footer">
         <ul id="content-tabs" class="nav nav-tabs">
-            <li ng-class="active('#/hello-world')"><a href="#/settings" >{{msg('ODK')}}</a></li>
+            <li ng-class="active('#/settings')"><a href="#/odk/settings" >{{msg('odk.settings')}}</a></li>
         </ul>
     </div>
     <div class="ui-layout-content">
