--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -3,15 +3,16 @@
     <div class="header-footer-breadcrumb">
         <ul class="breadcrumb" role="navigation">
             <li><a role="menu" href=".">{{msg('server.home')}}</a></li>
-            <li class="active"><a role="menu" href="#/odk/settings">{{msg('odk.settings')}}</a></li>
-            <li class="active"><a role="menu" href="#/odk/forms">{{msg('odk.forms')}}</a></li>
+            <li><a role="menu" href="#/odk/settings">{{msg('odk')}}</a></li>
+            <li ng-show="active('#/odk/settings')" ng-class="active('#/odk/settings')">{{msg('odk.settings')}}</li>
+            <li ng-show="active('#/odk/forms')" ng-class="active('#/odk/forms')">{{msg('odk.forms')}}</li>
 
         </ul>
     </div>
     <div class="header-footer">
         <ul id="content-tabs" class="nav nav-tabs">
-            <li ng-class="active('#/settings')"><a href="#/odk/settings" >{{msg('odk.settings')}}</a></li>
-            <li ng-class="active('#/import')"><a href="#/odk/forms" >{{msg('odk.forms')}}</a></li>
+            <li ng-class="active('#/odk/settings')"><a href="#/odk/settings" >{{msg('odk.settings')}}</a></li>
+            <li ng-class="active('#/odk/forms')"><a href="#/odk/forms" >{{msg('odk.forms')}}</a></li>
         </ul>
     </div>
     <div class="ui-layout-content">
